--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy VuePress site to GitHub Pages
 
 on:
   push:
-    branches: [master]  # 设置触发部署的分支
-  workflow_dispatch:  # 允许手动触发部署
+    branches: [master]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -21,18 +21,36 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8  # 指定您使用的 pnpm 版本，请根据您的实际版本调整
+          run_install: false
           
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+          
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+        
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
         
       - name: Build VuePress site
-        run: npm run build
+        run: pnpm run build
         
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3  # 使用 v3 版本
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vuepress/dist  # VuePress 构建输出目录，根据您的配置可能需要调整
+          path: docs/.vuepress/dist  # 确保这是您的构建输出目录
 
   deploy:
     environment:
@@ -43,4 +61,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3  # 使用 v3 版本
+        uses: actions/deploy-pages@v3
