--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: 8  # 指定您使用的 pnpm 版本，请根据您的实际版本调整
+          version: 8
           run_install: false
           
       - name: Get pnpm store directory
@@ -45,7 +45,7 @@ jobs:
         run: pnpm install
         
       - name: Build VuePress site
-        run: pnpm run build
+        run: pnpm run docs:build  # 使用正确的构建命令 docs:build
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
